force-app/main/default/objects/MargePEPS__c/MargePEPS__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Permet de monitorer la marge par defaut et le seuil minimal et maximal</description>
    <label>Marge PEP&apos;s</label>
</CustomObject>