force-app/main/default/objects/MargePEPS__c/fields/DefaultMargin__c.field-meta.xml
<CustomField>
    <fullName>DefaultMargin__c</fullName>
    <label>Marge par défaut</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>