force-app/main/default/objects/MargePEPS__c/fields/MaxMargin__c.field-meta.xml
<CustomField>
    <fullName>MaxMargin__c</fullName>
    <label>Marge maximale autorisée</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>