force-app/main/default/objects/MargePEPS__c/fields/MinMargin__c.field-meta.xml
<CustomField>
    <fullName>MinMargin__c</fullName>
    <label>Marge minimale autorisée</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>